--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,28 @@
 .header { 
     text-align: center;
-    height: 100px;
+    height: 220px;
     width: auto;
     background-color: #9999cc;
     padding: 1%
 }
 
+.logo {
+    text-align: center;
+    padding: 10px;
+    color: white;
+    font-size: 20px;
+    background-color: #9999cc;
+    border: 5px solid purple;
+    width: 75%;
+}
+
+.logo a:hover {
+  background-color: blueviolet;
+}
+
 .content {   
     width: auto;
-    height: 500px;
+    height: 340px;
     border: 5px solid purple;
     padding: 50px;
     margin: 20px;}
@@ -43,6 +57,7 @@
   background-color: #9999cc;
   overflow: auto;
   border: 5px solid purple;
+  float: right;
 }
 
 .navbar a {
